feat: darkmode implemented

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
 <main
-  class="flex justify-center items-start bg-gradient-to-br from-gray-900 via-gray-800 to-gray-900 min-h-screen"
+  class="flex justify-center items-start bg-gradient-to-br from-gray-50 via-white to-gray-50 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900 min-h-screen"
 >
-  <ngx-sonner-toaster position="bottom-right" richColors theme="dark" />
+  <ngx-sonner-toaster position="bottom-right" richColors theme="system" />
   <router-outlet />
 </main>
