--- a/src/app/components/layout/protect-layout/protect-layout.html
+++ b/src/app/components/layout/protect-layout/protect-layout.html
@@ -1,4 +1,4 @@
-<main class="relative w-[90vw] p-4 mx-auto">
+<div class="relative w-[90vw] p-4 mx-auto">
   <app-header />
   <router-outlet />
-</main>
+</div>
