--- a/src/app/components/ui/input/input.html
+++ b/src/app/components/ui/input/input.html
@@ -18,7 +18,12 @@
 
     @if (type === 'email') {
     <div class="right-0 absolute inset-y-0 flex items-center pr-3">
-      <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <svg
+        class="w-5 h-5 text-gray-500 dark:text-gray-400"
+        fill="none"
+        stroke="currentColor"
+        viewBox="0 0 24 24"
+      >
         <path
           stroke-linecap="round"
           stroke-linejoin="round"
@@ -32,7 +37,7 @@
       <button
         type="button"
         (click)="togglePasswordVisibility()"
-        class="text-gray-400 hover:text-gray-300 transition-colors duration-200 cursor-pointer"
+        class="text-gray-500 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-300 transition-colors duration-200 cursor-pointer"
       >
         @if (showPassword) {
         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
