--- a/src/app/pages/(protect)/dashboard/dashboard.html
+++ b/src/app/pages/(protect)/dashboard/dashboard.html
@@ -1,15 +1,17 @@
 <div class="pb-14">
   <div class="gap-4 grid lg:grid-cols-3 lg:grid-rows-2 mt-8 sm:mt-8">
     <div class="relative lg:row-span-2">
-      <div class="absolute inset-px bg-gray-800 rounded-lg lg:rounded-l-4xl"></div>
+      <div class="absolute inset-px bg-gray-100 dark:bg-gray-800 rounded-lg lg:rounded-l-4xl"></div>
       <div
         class="relative flex flex-col rounded-[calc(var(--radius-lg)+1px)] lg:rounded-l-[calc(2rem+1px)] h-full overflow-hidden"
       >
         <div class="px-8 sm:px-10 pt-8 sm:pt-10 pb-3 sm:pb-0">
-          <p class="mt-2 font-medium text-white text-lg max-lg:text-center tracking-tight">
+          <p
+            class="mt-2 font-medium text-gray-900 dark:text-white text-lg max-lg:text-center tracking-tight"
+          >
             Mobile friendly
           </p>
-          <p class="mt-2 max-w-lg text-gray-400 text-sm/6 max-lg:text-center">
+          <p class="mt-2 max-w-lg text-gray-600 dark:text-gray-300 text-sm/6 max-lg:text-center">
             Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat
             commodo.
           </p>
@@ -31,15 +33,19 @@
       ></div>
     </div>
     <div class="relative max-lg:row-start-1">
-      <div class="absolute inset-px bg-gray-800 rounded-lg max-lg:rounded-t-4xl"></div>
+      <div
+        class="absolute inset-px bg-gray-100 dark:bg-gray-800 rounded-lg max-lg:rounded-t-4xl"
+      ></div>
       <div
         class="relative flex flex-col rounded-[calc(var(--radius-lg)+1px)] max-lg:rounded-t-[calc(2rem+1px)] h-full overflow-hidden"
       >
         <div class="px-8 sm:px-10 pt-8 sm:pt-10">
-          <p class="mt-2 font-medium text-white text-lg max-lg:text-center tracking-tight">
+          <p
+            class="mt-2 font-medium text-gray-900 dark:text-white text-lg max-lg:text-center tracking-tight"
+          >
             Performance
           </p>
-          <p class="mt-2 max-w-lg text-gray-400 text-sm/6 max-lg:text-center">
+          <p class="mt-2 max-w-lg text-gray-600 dark:text-gray-400 text-sm/6 max-lg:text-center">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit maiores impedit.
           </p>
         </div>
@@ -77,15 +83,17 @@
       ></div>
     </div>
     <div class="relative lg:col-start-2 lg:row-start-2 max-lg:row-start-3">
-      <div class="absolute inset-px bg-gray-800 rounded-lg"></div>
+      <div class="absolute inset-px bg-gray-100 dark:bg-gray-800 rounded-lg"></div>
       <div
         class="relative flex flex-col rounded-[calc(var(--radius-lg)+1px)] h-full overflow-hidden"
       >
         <div class="px-8 sm:px-10 pt-8 sm:pt-10">
-          <p class="mt-2 font-medium text-white text-lg max-lg:text-center tracking-tight">
+          <p
+            class="mt-2 font-medium text-gray-900 dark:text-white text-lg max-lg:text-center tracking-tight"
+          >
             Security
           </p>
-          <p class="mt-2 max-w-lg text-gray-400 text-sm/6 max-lg:text-center">
+          <p class="mt-2 max-w-lg text-gray-600 dark:text-gray-400 text-sm/6 max-lg:text-center">
             Morbi viverra dui mi arcu sed. Tellus semper adipiscing suspendisse semper morbi.
           </p>
         </div>
@@ -143,7 +151,11 @@
                     <div
                       class="absolute -bottom-1 -right-1 w-6 h-6 bg-emerald-500 rounded-full flex items-center justify-center"
                     >
-                      <svg class="w-3 h-3 text-white" fill="currentColor" viewBox="0 0 20 20">
+                      <svg
+                        class="w-3 h-3 text-gray-900 dark:text-white"
+                        fill="currentColor"
+                        viewBox="0 0 20 20"
+                      >
                         <path
                           fill-rule="evenodd"
                           d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
@@ -190,16 +202,18 @@
     </div>
     <div class="relative lg:row-span-2">
       <div
-        class="absolute inset-px bg-gray-800 rounded-lg lg:rounded-r-4xl max-lg:rounded-b-4xl"
+        class="absolute inset-px bg-gray-100 dark:bg-gray-800 rounded-lg lg:rounded-r-4xl max-lg:rounded-b-4xl"
       ></div>
       <div
         class="relative flex flex-col rounded-[calc(var(--radius-lg)+1px)] lg:rounded-r-[calc(2rem+1px)] max-lg:rounded-b-[calc(2rem+1px)] h-full overflow-hidden"
       >
         <div class="px-8 sm:px-10 pt-8 sm:pt-10 pb-3 sm:pb-0">
-          <p class="mt-2 font-medium text-white text-lg max-lg:text-center tracking-tight">
+          <p
+            class="mt-2 font-medium text-gray-900 dark:text-white text-lg max-lg:text-center tracking-tight"
+          >
             Powerful APIs
           </p>
-          <p class="mt-2 max-w-lg text-gray-400 text-sm/6 max-lg:text-center">
+          <p class="mt-2 max-w-lg text-gray-600 dark:text-gray-400 text-sm/6 max-lg:text-center">
             Sit quis amet rutrum tellus ullamcorper ultricies libero dolor eget sem sodales gravida.
           </p>
         </div>
@@ -210,7 +224,7 @@
             <div class="flex bg-gray-900 outline outline-white/5">
               <div class="flex -mb-px font-medium text-gray-400 text-sm/6">
                 <div
-                  class="bg-white/5 px-4 py-2 border-r border-r-white/10 border-b border-b-white/20 text-white"
+                  class="bg-white/5 dark:bg-white/5 px-4 py-2 border-r border-r-white/10 dark:border-r-white/10 border-b border-b-white/20 dark:border-b-white/20 text-gray-900 dark:text-white"
                 >
                   NotificationSetting.jsx
                 </div>
