--- a/src/app/pages/not-found/not-found.html
+++ b/src/app/pages/not-found/not-found.html
@@ -1,19 +1,23 @@
-<main class="place-items-center grid bg-gray-900 px-6 lg:px-8 py-24 sm:py-32 min-h-full">
+<main
+  class="place-items-center grid bg-gray-50 dark:bg-gray-900 px-6 lg:px-8 py-24 sm:py-32 min-h-full"
+>
   <div class="text-center">
-    <p class="font-semibold text-indigo-400 text-base">404</p>
-    <h1 class="mt-4 font-semibold text-white text-5xl sm:text-7xl text-balance tracking-tight">
+    <p class="font-semibold text-indigo-600 dark:text-indigo-400 text-base">404</p>
+    <h1
+      class="mt-4 font-semibold text-gray-900 dark:text-white text-5xl sm:text-7xl text-balance tracking-tight"
+    >
       Page not found
     </h1>
-    <p class="mt-6 font-medium text-gray-400 text-lg sm:text-xl/8 text-pretty">
-      Sorry, we couldn’t find the page you’re looking for.
+    <p class="mt-6 font-medium text-gray-600 dark:text-gray-400 text-lg sm:text-xl/8 text-pretty">
+      Sorry, we couldn't find the page you're looking for.
     </p>
     <div class="flex justify-center items-center gap-x-6 mt-10">
       <a
         href="#"
-        class="bg-indigo-500 hover:bg-indigo-400 shadow-xs px-3.5 py-2.5 rounded-md focus-visible:outline-2 focus-visible:outline-indigo-500 focus-visible:outline-offset-2 font-semibold text-white text-sm"
+        class="bg-indigo-600 dark:bg-indigo-500 hover:bg-indigo-700 dark:hover:bg-indigo-400 shadow-xs px-3.5 py-2.5 rounded-md focus-visible:outline-2 focus-visible:outline-indigo-500 focus-visible:outline-offset-2 font-semibold text-white text-sm"
         >Go back home</a
       >
-      <a href="#" class="font-semibold text-white text-sm"
+      <a href="#" class="font-semibold text-gray-900 dark:text-white text-sm"
         >Contact support <span aria-hidden="true">&rarr;</span></a
       >
     </div>
